OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/tracker/?group_id=260863

OpenSearchServer 1.3

New features:
- 3512267: OCR Integration
- 3485668: Jsoup HTML parser
- 3471808: Consecutive duplicate characters filter
- 3467459: Phonetic filters
- 3467437: A filter to extract the domain information
- 3466448: Multiple OpenSearchServer instances on one Tomcat server
- 3466447: Adding NumDeletedDocs in Runtime/Index
- 3466445: Upgrade Apache POI to 3.8	
- 3422180: Upgrade to ZK 5.0.10
- 3417863: Upgrade Tomcat to version 6.0.35
- 3421240: JSON response for OpenSearchServer
- 3386107: OpenSearch Standards

OpenSearchServer 1.2.4

New features:
- 3510598: Add CSV format in the select XML/HTTP API
- 3498421: Set a default URL value for replication
- 3498373: Remove script and object tag content in db crawler
- 3483920: BoostQuery support
- 3483681: Add a download button for log files
- 3482284: LimitInputStream should be buffered
- 3477836: A separated error log for the parser	
- 3469777: Scored snippets

Bug fixes:
- 3516114: NPE with Web Crawler when no unique field is set
- 3500288: Wrong facet count when using optimized collapsing
- 3498607: NPE when collapsing is enable with no documents found
- 3485241: Pages with meta noindex are indexed
- 3483798: HTML parser prints many logs
- 3483259: Underscore added when using synonyms on expression
- 3482151: Monitor API response gives error
- 3479649: SetField and DeleteField API don't update config.xml
- 3479548: Report log files are truncated
- 3476578: UTF-8 character as separator in snippet field
- 3475446: head indexed instead of body (using <script /> in head)
- 3476551: Query with Quotation Marks has unusual results	
- 3474877: URL Filter doesn't work for jsessionid
- 3472905: Error while crawling local HTML file
- 3471749: Out Of Memory Error while indexing PDF document

OpenSearchServer 1.2.3

New features: