@@ -9,6 +9,7 @@ http://sourceforge.net/tracker/?group_id=260863
 OpenSearchServer 1.3
 
 New features:
+- 3519206: XSL support on XML upload
 - 3512267: OCR Integration
 - 3485668: Jsoup HTML parser
 - 3471808: Consecutive duplicate characters filter
